--- a/css/profil.css
+++ b/css/profil.css
@@ -137,7 +137,7 @@ body {
 }
 
 .portal-footer {
-    background-color: #0f172a;
+    background-color: #1a531b;
     color: #94a3b8;
     padding: 60px 50px 30px;
 }
